@startuml

title __MODELS's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.BillingAccountViewModel {
          - creditCardNumber : String
          - id : Long
          - isBanned : boolean
          - money : int
          - name : String
          - ownerId : Long
          - password : String
          + BillingAccountViewModel()
          + BillingAccountViewModel()
          + getCreditCardNumber()
          + getId()
          + getIsBanned()
          + getMoney()
          + getName()
          + getOwnerId()
          + getPassword()
          + setBanned()
          + setCreditCardNumber()
          + setId()
          + setMoney()
          + setName()
          + setOwnerId()
          + setPassword()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      enum Categories {
        development
        films
        music
        office
        streaming
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.OfferParamViewModel {
          - id : Long
          - name : String
          - productOfferingId : Long
          - value : String
          + OfferParamViewModel()
          + OfferParamViewModel()
          + getId()
          + getName()
          + getProductOfferingId()
          + getValue()
          + setId()
          + setName()
          + setProductOfferingId()
          + setValue()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.ProductInstanceViewModel {
          - id : Long
          - status : boolean
          - userId : Long
          + ProductInstanceViewModel()
          + ProductInstanceViewModel()
          + getId()
          + getProductOffering()
          + getUserId()
          + isStatus()
          + setId()
          + setProductOffering()
          + setStatus()
          + setUserId()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.ProductOfferingViewModel {
          - category : int
          - description : String
          - id : Long
          - isBanned : boolean
          - name : String
          - params : List<OfferParamViewModel>
          - price : int
          + ProductOfferingViewModel()
          + ProductOfferingViewModel()
          + getCategory()
          + getDescription()
          + getId()
          + getIsBanned()
          + getName()
          + getParams()
          + setCategory()
          + setDescription()
          + setId()
          + setIsBanned()
          + setName()
          + setParams()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.StatisticsEntryViewModel {
          - billingAccountId : Long
          - date : LocalDateTime
          - id : Long
          - sum : Long
          + StatisticsEntryViewModel()
          + StatisticsEntryViewModel()
          + getBillingAccountId()
          + getDate()
          + getId()
          + getServiceId()
          + getSum()
          + setBillingAccountId()
          + setDate()
          + setId()
          + setServiceId()
          + setSum()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.UserAccountViewModel {
          - email : String
          - id : Long
          - isAdmin : boolean
          - isBanned : boolean
          - name : String
          - password : String
          + UserAccountViewModel()
          + UserAccountViewModel()
          + getAuthorities()
          + getEmail()
          + getId()
          + getIsAdmin()
          + getIsBanned()
          + getName()
          + getPassword()
          + getUsername()
          + isAccountNonExpired()
          + isAccountNonLocked()
          + isCredentialsNonExpired()
          + isEnabled()
          + setIsAdmin()
          + setIsBanned()
      }
    }
  }
  

  by.training.nc.sd3.models.ProductInstanceViewModel o-- by.training.nc.sd3.models.ProductOfferingViewModel : productOffering
  by.training.nc.sd3.models.StatisticsEntryViewModel o-- by.training.nc.sd3.models.ProductOfferingViewModel : serviceId
  by.training.nc.sd3.models.UserAccountViewModel .up.|> org.springframework.security.core.userdetails.UserDetails


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
